Update _all.scss update logo size for new logo + media responsiveness.

--- a/static/styles/_all.scss
+++ b/static/styles/_all.scss
@@ -29,8 +29,8 @@ body {
 
     .logo {
       img {
-        width: 151px;
-        height: 44px;
+        width: 200px;
+        // height: 44px;
       }
     }
 
@@ -51,6 +51,14 @@ body {
           border-radius: 4px;
           text-align: center;
           color: #FFFFFF;
+        }
+      }
+    }
+
+    @media screen and (max-width: $break-small) {
+      .logo {
+        img {
+          width: 150px;
         }
       }
     }
