--- a/static/styles/_all.scss
+++ b/static/styles/_all.scss
@@ -66,7 +66,7 @@ body {
 
   .page-header {
     text-align: center;
-    padding: 100px 0 100px 0;
+    padding: 100px 10px 100px 10px;
     background-color: #fdfaff;
     border-radius: 0px 0px 40px 40px;
 
@@ -96,7 +96,7 @@ body {
 
     img {
       margin-top: 61px;
-      max-width: 65%;
+      max-height: 400px;
     }
 
     &.home {
