Update misc files not sure what went on but fonts became all screwy.

--- a/static/styles/_all.scss
+++ b/static/styles/_all.scss
@@ -3,11 +3,11 @@
 $break-small: 719px;
 
 body {
-  font-family: Inter;
+  font-family: Ubuntu;
   color: #797283;
 
   p {
-    font-family: Inter;
+    font-family: Ubuntu;
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -249,7 +249,7 @@ body {
     .call-to-action__content {
       h2 {
         font-size: 36px;
-        font-family: Inter;
+        font-family: Ubuntu;
         font-weight: 600;
         margin: 0 0 32px;
         color: #ffffff;
@@ -311,7 +311,7 @@ body {
     color: #1E1C21;
 
     h1, h2, h3, h4, h5, h6 {
-      font-family: Inter;
+      font-family: Ubuntu;
     }
 
     .title {
@@ -364,7 +364,7 @@ body {
           font-size: 14px;
           font-weight: bold;
           text-transform: uppercase;
-          font-family: Inter;
+          font-family: Ubuntu;
           line-height: 0;
         }
 
