--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
@@ -12,4 +12,4 @@
     font-weight: 400;
     src: url("Inter-Regular.woff2") format("woff2"),
     url("Inter-Regular.woff") format("woff");
-}
+} */
