--- a/static/styles/_all.scss
+++ b/static/styles/_all.scss
@@ -297,6 +297,10 @@ body {
         font-size: 18px;
         line-height: 26px;
       }
+
+      img {
+        max-width: 256px;
+      }
     }
   }
 
